# rustweek_badge

./: .gitignore  Cargo.toml  Justfile  README.md  REFERENCE.md
.zed/: settings.json
app/: Cargo.toml  Dioxus.toml
app/assets/: tailwind.css
app/src/: ble.rs  main.rs
app/src/views/: home.rs
badge/: .gitignore  Cargo.toml
badge/src/: _fordebug.rs  command.rs  consts.rs  light.rs  main.rs
badge/src/bluetooth/: mod.rs  server.rs
badge/src/display/: color.rs  display.rs  mod.rs
badge/src/display/drivers/: display420tri.rs  mod.rs  sram23k256.rs  ssd1683.rs  tricolor.rs
badge/src/display/drivers/ssd1683/: commands.rs  mod.rs  old_commands.rs
mobile/: Cargo.toml
mobile/assets/: tailwind.css
mobile/src/: ble.rs
mobile/src/views/: home.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  testing.rs
src/epd/: display420.rs  lut.rs  mod.rs  sram23k256.rs  ssd1683.rs
src/epd_old/: display420tri.rs
testembassy/: Cargo.toml
testembassy/src/: bluetooth.rs  command.rs  consts.rs  light.rs  main.rs
testembassy/src/bluetooth/: mod.rs  server.rs
