[package]
name = "rustweek_badge"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "rustweek_badge"
path = "./src/bin/main.rs"

[dependencies]
bevy_app = { version = "0.18", default-features = false, features = [
  "critical-section"
] }
bevy_ecs = { version = "0.18", default-features = false, features = [
  "critical-section"
] }
bleps = { package = "bleps", git = "https://github.com/bjoernQ/bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
defmt = "1.0.1"
embedded-io = { version = "0.7.1", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c6", "unstable"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rkyv = { version = "0.8", default-features = false, features = [
  "alloc",
  "bytecheck"
] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# esp-hal-smartled = {version = "0.17.0", features = ["esp32c6", "defmt"] }
smart-leds = { version = "0.4" }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

embedded-graphics = "0.8"
embedded-hal = { version = "1.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.3", features = ["defmt-03"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
opt-level = "s"
debug = 2  # prefer slower builds but better debugging experience
lto = "fat"
codegen-units = 1  # LLVM can perform better optimizations using a single thread
